--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
 				</div>
 
 				<div class="col-md-7 mb-5 mb-md-0">
-					<form action="https://formsubmit.co/louisconnesson@live.com" method="POST">
+					<form action="https://formsubmit.co/el/fotiwa.com" method="POST">
 						<h3 class="mb-5">Get In Touch</h3>
 						<div class="form-group">
 							<input type="text" class="form-control px-3 py-4" placeholder="Your Name">
