--- a/index.html
+++ b/index.html
@@ -694,13 +694,13 @@
 					<form action="https://formsubmit.co/22cb7676341ca88444e9fa31b7f6e1ee" method="POST">
 						<h3 class="mb-5">Get In Touch</h3>
 						<div class="form-group">
-							<input type="text" class="form-control px-3 py-4" placeholder="Your Name">
+							<input name="name" type="text" class="form-control px-3 py-4" placeholder="Your Name">
 						</div>
 						<div class="form-group">
-							<input type="email" class="form-control px-3 py-4" placeholder="Your Email">
+							<input name="email" type="email" class="form-control px-3 py-4" placeholder="Your Email">
 						</div>
 						<div class="form-group mb-5">
-							<textarea class="form-control px-3 py-4"cols="30" rows="10" placeholder="Write a Message"></textarea>
+							<textarea name="message" class="form-control px-3 py-4"cols="30" rows="10" placeholder="Write a Message"></textarea>
 						</div>
 						<div class="form-group">
 							<input type="submit" class="btn btn-primary  px-4 py-3" value="Send Message">
