--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<li class="active" data-filter="*">All</li>
 					<li data-filter=".VR">VR</li>
 					<li data-filter=".GameJam">GameJam</li>
-					<li data-filter=".Self-Experience">Self-Experience</li>
+					<li data-filter=".Other-Experience">Other-Experience</li>
 					<li data-filter=".HumanProject">HumanProject</li>
 				</ul>
 			</div>
@@ -138,8 +138,8 @@
     							<div class="p-inner">
 									<div class="row">
 										<div class="col-lg-5" style="margin-left: 8%;">
-	    								 </h1><video width="100%" height="550" loop muted preload="metadata" autoplay>
-	      								<source src="videos/trottinette.mp4" type=video/mp4>	  </video>
+	    								 <video width="100%" height="550" loop muted preload="metadata" autoplay>
+	      								<source src="videos/trottinette.mp4" type=video/mp4></video>
 	      									</div>
 	      								<div class="col-lg-5" style="margin-right: 8%;">
 											<h1>Scooter Simulator in Virtual Reality :</h1> 
@@ -244,7 +244,7 @@
 							<a href="https://theo-lefeuvre.itch.io/blackholostar"style="margin-left: 4%;" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Take a look</a></div>
 						</div>
 					</div>
-					<div class="single-portfolio col-sm-12 all Self-Experience">
+					<div class="single-portfolio col-sm-12 all Other-Experience">
 						<div class="relative">
 							<div class="thumb">
 								<div class="overlay overlay-bg"></div>
