--- a/index.html
+++ b/index.html
@@ -245,16 +245,6 @@
 						</div>
 					</div>
 					<div class="single-portfolio col-sm-12 all Other-Experience">
-						<div class="relative">
-							<div class="thumb">
-								<div class="overlay overlay-bg"></div>
-							</div>
-							<a href="images/p5.jpg" class="img-pop-up">  
-								<div class="middle">
-									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
-								</div>
-							</a>                                
-						</div>
 						<div class="p-inner">
 							<div class="row">
 										<div class="col-lg-7" >
@@ -269,6 +259,24 @@
 						<div class="tags col-lg-5" style="margin-left: 8%;">
 										<a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><FONT size="5pt">C#</FONT></a>
 										<a href="https://unity.com/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">Unity</FONT></a>
+									</div>
+						</div>
+					</div>
+										<div class="single-portfolio col-sm-12 all Other-Experience">
+						<div class="p-inner">
+							<div class="row">
+										<div class="col-lg-7" >
+							 <video width="100%" height="400" loop muted preload="metadata" autoplay>
+      								<source src="videos/advancewar.mp4" type=video/mp4></video>
+      								</div>
+      								<div class="col-lg-5" >
+      									<h1>Development of AdvanceWar mechanics:</h1>
+							<div class="cat"><FONT size="4pt">Creation of a level to learn how to program turn-based games in C++ and be familiar with the implementation of AdvanceWar mechanics in term of gameplay.</FONT></div>
+						</div>
+						</div>
+						<div class="tags col-lg-5" style="margin-left: 8%;">
+										<a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank"><FONT size="5pt">C++</FONT></a>
+										<a href="https://www.libsdl.org/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">SDL</FONT></a>
 									</div>
 						</div>
 					</div>
