--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     							<div class="p-inner">
 									<div class="row">
 										<div class="col-lg-5" style="margin-left: 8%;">
-	    								 <video width="100%" height="550" loop muted preload="metadata" autoplay>
+	    								 <video width="100%" height="550" poster="images/download.gif" loop muted preload="metadata" autoplay>
 	      								<source src="videos/trottinette.mp4" type=video/mp4></video>
 	      									</div>
 	      								<div class="col-lg-5" style="margin-right: 8%;">
@@ -172,7 +172,7 @@
 						<div class="p-inner">
 							<div class="row">
 										<div class="col-lg-7" >
-							<video width="100%"  height="500" loop muted preload="metadata" autoplay>
+							<video width="100%"  height="500" poster="images/download.gif" loop muted preload="metadata" autoplay>
       								<source src="videos/stellarium.mp4" type=video/mp4>
     							</video>
 							</div>
@@ -228,7 +228,7 @@
 						<div class="p-inner">
 							<div class="row">
 										<div class="col-lg-7" >
-							<video width="100%" height="400" loop muted preload="metadata" autoplay>
+							<video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
       								<source src="videos/holostar.mp4" type=video/mp4>
     							</video>
 							</div>
@@ -248,7 +248,7 @@
 						<div class="p-inner">
 							<div class="row">
 										<div class="col-lg-7" >
-							 <video width="100%" height="400" loop muted preload="metadata" autoplay>
+							 <video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
       								<source src="videos/game2d.mp4" type=video/mp4></video>
       								</div>
       								<div class="col-lg-5" >
@@ -266,7 +266,7 @@
 						<div class="p-inner">
 							<div class="row">
 										<div class="col-lg-7" >
-							 <video width="100%" height="400" loop muted preload="metadata" autoplay>
+							 <video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
       								<source src="videos/advancewar.mp4" type=video/mp4></video>
       								</div>
       								<div class="col-lg-5" >
