--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 	      								<source src="videos/trottinette.mp4" type=video/mp4></video>
 	      									</div>
 	      								<div class="col-lg-5" style="margin-right: 8%;">
-											<h1>Scooter Simulator in Virtual Reality :</h1> 
-								<div class="cat"><FONT size="4pt">Project carried out as part of my studies at ESIEA aimed at the realization of a scooter simulator in virtual reality to raise awareness of road safety. Produced under Unity and in partnership with the University of Tama (Japan) and a research laboratory.<br> 
+											<h1>Scooter Simulator in Virtual Reality:</h1> 
+								<div class="cat"><FONT size="4pt">Project carried out as part of my studies at ESIEA aimed at the realization of a scooter simulator in virtual reality to raise awareness of road safety. Produced under Unity and in partnership with the University of Tama (Japan) and  the French research laboratory PISC-L.<br> 
 									This project was also presented at Laval Virtual 2021.</FONT> </div>
 										</div>
 	    								 
@@ -177,7 +177,7 @@
     							</video>
 							</div>
 							<div class="col-lg-5">
-							<h1>Constellation Simulator in Virtual Reality :</h1>
+							<h1>Constellation Simulator in Virtual Reality:</h1>
 							<div class="cat"><FONT size="4pt">Realization of a constellation simulator in Virtual Reality as part of my studies at ESIEA in order to propose a tool facilitating the learning of constellations. Produced under Unity, it consists of several activities inviting learning the names, shapes and locations of constellations.</FONT></div>
 						</div>
 						</div>
@@ -233,7 +233,7 @@
     							</video>
 							</div>
 							<div class="col-lg-5" >
-							<h1>Participation in a GameJam :</h1>
+							<h1>Participation in a GameJam:</h1>
 							<div class="cat"><FONT size="5pt">Production of a Shoot'Em Up on Unity during a week-long GameJam</FONT></div>
 						</div>
 						</div>
@@ -262,7 +262,7 @@
 									</div>
 						</div>
 					</div>
-										<div class="single-portfolio col-sm-12 all Other-Experience">
+					<div class="single-portfolio col-sm-12 all Other-Experience">
 						<div class="p-inner">
 							<div class="row">
 										<div class="col-lg-7" >
@@ -280,6 +280,27 @@
 									</div>
 						</div>
 					</div>
+
+					<div class="single-portfolio col-sm-12 all Other-Experience">
+						<div class="p-inner">
+							<div class="row">
+										<div class="col-lg-7" >
+							 <video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
+      								<source src="videos/pokedex.mp4" type=video/mp4></video>
+      								</div>
+      								<div class="col-lg-5" >
+      									<h1>Web Pokedex:</h1>
+							<div class="cat"><FONT size="4pt">Development of a Pokedex displayed on a Web page, using front-end and back-end Web.</FONT></div>
+						</div>
+						</div>
+						<div class="tags col-lg-5" style="margin-left: 8%;">
+										<a href="https://en.wikipedia.org/wiki/HTML" target="_blank"><FONT size="5pt">HTML</FONT></a>
+										<a href="https://en.wikipedia.org/wiki/CSS" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">CSS</FONT></a>
+										<a href="https://nodejs.org/en/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">NodeJS</FONT></a>
+									</div>
+						</div>
+					</div>
+
 					<div class="single-portfolio col-sm-12 all HumanProject">
 						<div class="relative">
 							
