Update nodejs, particles and grammar

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 	      									</div>
 	      								<div class="col-lg-5" style="margin-right: 8%;">
 											<h1>Scooter Simulator in Virtual Reality:</h1> 
-								<div class="cat"><FONT size="4pt">Project carried out as part of my studies at ESIEA aimed at the realization of a scooter simulator in virtual reality to raise awareness of road safety. Produced under Unity and in partnership with the University of Tama (Japan) and  the French research laboratory PISC-L.<br> 
+								<div class="cat"><FONT size="3pt">Project carried out as part of my studies at ESIEA aimed at the realization of a scooter simulator in virtual reality to raise awareness of road safety. Produced under Unity and in partnership with <a href="https://www.tama.ac.jp/english/" target="_blank">Tama University</a> and  the French research laboratory <a href="https://pics-l.univ-gustave-eiffel.fr/en/main" target="_blank">PISC-L</a>.<br> 
 									This project was also presented at Laval Virtual 2021.</FONT> </div>
 										</div>
 	    								 
@@ -178,7 +178,7 @@
 							</div>
 							<div class="col-lg-5">
 							<h1>Constellation Simulator in Virtual Reality:</h1>
-							<div class="cat"><FONT size="4pt">Realization of a constellation simulator in Virtual Reality as part of my studies at ESIEA in order to propose a tool facilitating the learning of constellations. Produced under Unity, it consists of several activities inviting learning the names, shapes and locations of constellations.</FONT></div>
+							<div class="cat"><FONT size="4pt">Realization of a constellation simulator in Virtual Reality as part of my studies at ESIEA in order to propose a tool facilitating the learning of constellations. Produced under Unity, it consists of several activities builded to induce the user to learn and remember the names, shapes and locations of constellations.</FONT></div>
 						</div>
 						</div>
 						<div class="tags col-lg-5" style="margin-left: 8%;">
@@ -234,7 +234,7 @@
 							</div>
 							<div class="col-lg-5" >
 							<h1>Participation in a GameJam:</h1>
-							<div class="cat"><FONT size="5pt">Production of a Shoot'Em Up on Unity during a week-long GameJam</FONT></div>
+							<div class="cat"><FONT size="5pt">Production of a Shoot'Em Up on Unity during a week-long GameJam in order to get familiarized with Unity3D.</FONT></div>
 						</div>
 						</div>
 						<div class="tags col-lg-5" style="margin-left: 8%;">
@@ -253,7 +253,7 @@
       								</div>
       								<div class="col-lg-5" >
       									<h1>Platformer 2D on Unity:</h1>
-							<div class="cat"><FONT size="5pt">Testing a 2D Game Level on Unity.</FONT></div>
+							<div class="cat"><FONT size="5pt">Development of a 2D Game Level on Unity in order to learn about sprite animations and possible uses of 2D in Unity.</FONT></div>
 						</div>
 						</div>
 						<div class="tags col-lg-5" style="margin-left: 8%;">
@@ -301,6 +301,25 @@
 						</div>
 					</div>
 
+					<div class="single-portfolio col-sm-12 all Other-Experience">
+						<div class="p-inner">
+							<div class="row">
+										<div class="col-lg-7" >
+							 <video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
+      								<source src="videos/matrice.mp4" type=video/mp4></video>
+      								</div>
+      								<div class="col-lg-5" >
+      									<h1>Render of 3D objects in C:</h1>
+							<div class="cat"><FONT size="4pt">Use of a small basecode to develop and learn how to render 3D objects with C language and using SDL</FONT></div>
+						</div>
+						</div>
+						<div class="tags col-lg-5" style="margin-left: 8%;">
+										<a href="https://en.wikipedia.org/wiki/C_(programming_language)" target="_blank"><FONT size="5pt">C</FONT></a>
+										<a href="https://www.libsdl.org/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">SDL</FONT></a>
+									</div>
+						</div>
+					</div>
+
 					<div class="single-portfolio col-sm-12 all HumanProject">
 						<div class="relative">
 							
@@ -324,7 +343,7 @@
 
 						<div class="col-lg-5 " style="margin-right: 4%;" >
 							<h1>Charity LAN Organization:</h1>
-							<div class="cat"><FONT size="4pt">Help to organize a video game tournaments on my campus to raise funds for a charity.</FONT></div> 
+							<div class="cat"><FONT size="4pt">Help to organize a video game tournaments on my campus in order to raise funds for a charity.</FONT></div> 
 							</div>
 						</div>
 						</div> 
@@ -353,7 +372,7 @@
 
 						<div class="col-lg-5 " >
 							<h1>Establishment of a Crowdfounding</h1>
-							<div class="cat"><FONT size="3pt">Participation in the elaboration of a crowdfounding in order to help in the construction of a building of social utility "L'Archipel" in the commune of Montflours.</FONT></div> 
+							<div class="cat"><FONT size="3pt">Participation in the elaboration of a crowdfounding in order to help for the construction of a building of social utility "L'Archipel" in the commune of Montflours.</FONT></div> 
 							</div>
 						</div>
 						</div> 
@@ -404,7 +423,7 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> June 2022 - August 2022</span>
 						<h3>Unity Developer</h3>
-						<p>Participation in a metaverse experiment within SogetiLabs as a Unity developer developing in C# under Unity3D.
+						<p>Participation in a metaverse experiment within SogetiLabs as a Unity developer using in C# under Unity3D.
 						<br> Discovery of Photon and Drupal.</p>
 						<span class="school"><a href="https://www.capgemini.com/" target="_blank"><FONT size="3pt">Capgemini</FONT></a> - <a href="https://labs.sogeti.com/" target="_blank"><FONT size="3pt">SogetiLabs</FONT></a></span>
 						<a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><FONT size="3pt">C#</FONT></a>
@@ -611,7 +630,7 @@
 												<h3 class="mb-4">Web</h3>
 						<div class="skills_list" style="display: grid;">
 							<div class="row">
-								<div class="col-lg-5" style="margin-left: 8%;">
+								<div class="col-lg-5" style="margin-left: 6%;">
 								<a class="skill" href="https://en.wikipedia.org/wiki/HTML" target="_blank">
 									<img src="images/Skills/Html.svg">
 									<span>HTML</span>
@@ -623,7 +642,7 @@
 									<span>CSS</span>
 								</a>
 							</div>
-							<div class="col-lg-5" style="margin-left: 8%;">
+							<div class="col-lg-5" style="margin-left: 6%;">
 								<a class="skill" href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
 									<img src="images/Skills/JavaScript.svg">
 									<span>JavaScript</span>
@@ -635,7 +654,14 @@
 									<span>ThreeJS</span>
 								</a>
 							</div>
+												<div class="col-lg-5" style="margin-left: 30%;">
+									<a class="skill" href="https://nodejs.org/en/" target="_blank">
+										<img src="images/Skills/NodeJs.svg">
+										<span>NodeJs</span>
+									</a>
+								</div>
 							</div>
+	
 						</div>
 						<!--<p><a href="#" class="site-link">Learn More <i class="icon-chevron-right"></i></a></p> -->
 					</div>
