--- a/index.html
+++ b/index.html
@@ -656,7 +656,7 @@
 							</div>
 												<div class="col-lg-5" style="margin-left: 30%;">
 									<a class="skill" href="https://nodejs.org/en/" target="_blank">
-										<img src="images/Skills/NodeJs.svg">
+										<img src="images/Skills/NodeJS.svg">
 										<span>NodeJs</span>
 									</a>
 								</div>
