--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
 			<div class="row mb-5">
 				<p class="col-12 text-center">
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-					Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true" ></i> by <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
+					Copyright &copy; <script>document.write(new Date().getFullYear());</script> All rights reserved | Website done with <i class="icon-heart text-danger" aria-hidden="true" ></i> by Louis Connesson, using a template from <a href="https://colorlib.com" target="_blank" class="text-primary">Colorlib</a>
 					<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 				</p>
 			</div>
