--- a/index.html
+++ b/index.html
@@ -244,6 +244,74 @@
 							<a href="https://theo-lefeuvre.itch.io/blackholostar"style="margin-left: 4%;" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Take a look</a></div>
 						</div>
 					</div>
+					<div class="single-portfolio col-sm-12 all GameJam">
+						<div class="relative">
+							<div class="thumb">
+								<div class="overlay overlay-bg"></div>
+							</div>
+							<a href="images/p4.jpg" class="img-pop-up">  
+								<div class="middle">
+									<div class="text align-self-center d-flex"><img src="images/preview.png" alt=""></div>
+								</div>
+							</a>                                
+						</div>
+						<div class="p-inner">
+							<div class="row">
+										<div class="col-lg-7" >
+							<video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
+      								<source src="videos/ZombieGameJam.mp4" type=video/mp4>
+    							</video>
+							</div>
+							<div class="col-lg-5" >
+							<h1>Render synchronization during a class game-jam:</h1>
+							<div class="cat"><FONT size="4pt">Production of a multiplayer survival game where the goal is to fight and survive against waves of zombies with a partner. This project was made to learn how to use the new tool, Netcode for Unity (release: Sept 20, 2022), to synchronize multiple render and make multiplayers video games.</FONT></div>
+						</div>
+						</div>
+						<div class="tags col-lg-5" style="margin-left: 8%;">
+										<a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><FONT size="5pt">C#</FONT></a>
+										<a href="https://unity.com/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">Unity</FONT></a>
+										<a href="https://docs-multiplayer.unity3d.com/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">UnityNetcode</FONT></a>
+						</div>
+						</div>
+					</div>
+					<div class="single-portfolio col-sm-12 all Other-Experience">
+						<div class="p-inner">
+							<div class="row">
+										<div class="col-lg-7" >
+							 <video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
+      								<source src="videos/game2d.mp4" type=video/mp4></video>
+      								</div>
+      								<div class="col-lg-5" >
+      									<h1>Platformer 2D on Unity:</h1>
+							<div class="cat"><FONT size="5pt">Development of a 2D Game Level on Unity in order to learn about sprite animations and possible uses of 2D in Unity.</FONT></div>
+						</div>
+						</div>
+						<div class="tags col-lg-5" style="margin-left: 8%;">
+										<a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><FONT size="5pt">C#</FONT></a>
+										<a href="https://unity.com/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">Unity</FONT></a>
+									</div>
+						</div>
+					</div>
+
+					<div class="single-portfolio col-sm-12 all Other-Experience">
+						<div class="p-inner">
+							<div class="row">
+										<div class="col-lg-7" >
+							 <video width="100%" height="400" poster="images/download.gif" loop muted preload="metadata" autoplay>
+      								<source src="videos/advancewar.mp4" type=video/mp4></video>
+      								</div>
+      								<div class="col-lg-5" >
+      									<h1>Development of AdvanceWar mechanics:</h1>
+							<div class="cat"><FONT size="4pt">Creation of a level to learn how to program turn-based games in C++ and be familiar with the implementation of AdvanceWar mechanics in term of gameplay.</FONT></div>
+						</div>
+						</div>
+						<div class="tags col-lg-5" style="margin-left: 8%;">
+										<a href="https://en.wikipedia.org/wiki/C%2B%2B" target="_blank"><FONT size="5pt">C++</FONT></a>
+										<a href="https://www.libsdl.org/" style="margin-left: 2%;" target="_blank"> <FONT size="5pt">SDL</FONT></a>
+									</div>
+						</div>
+					</div>
+
 					<div class="single-portfolio col-sm-12 all Other-Experience">
 						<div class="p-inner">
 							<div class="row">
