--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 					<div class="resume-item mb-4">
 						<span class="date"><span class="icon-calendar"></span> June 2022 - August 2022</span>
 						<h3>Unity Developer</h3>
-						<p>Participation in a metaverse experiment within SogetiLabs as a Unity developer using in C# under Unity3D.
+						<p>Participation in a metaverse experiment within SogetiLabs as a Unity developer using C# under Unity3D.
 						<br> Discovery of Photon and Drupal.</p>
 						<span class="school"><a href="https://www.capgemini.com/" target="_blank"><FONT size="3pt">Capgemini</FONT></a> - <a href="https://labs.sogeti.com/" target="_blank"><FONT size="3pt">SogetiLabs</FONT></a></span>
 						<a href="https://en.wikipedia.org/wiki/C_Sharp_(programming_language)" target="_blank"><FONT size="3pt">C#</FONT></a>
