--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 					</div>
 
 					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> July 2021</span>
+						<span class="date"><span class="icon-calendar"></span> August 2020 & July 2021</span>
 						<h3>Cashier</h3>
 						<p>Customer relationship management, accountability and maintenance in operational condition.</p>
 						<span class="school">Intermarché</span>
@@ -476,13 +476,6 @@
 						<h3>Project Presentation at Laval Virtual</h3>
 						<p>Holding of a stand and presentation of a project of scooter simulator in virtual reality realized within the framework of my studies at the ESIEA.</p>
 						<a href="https://www.laval-virtual.com/" target="_blank"><FONT size="3pt">LavalVirtual</FONT></a>
-					</div>
-
-					<div class="resume-item mb-4">
-						<span class="date"><span class="icon-calendar"></span> August 2020</span>
-						<h3>Cashier</h3>
-						<p>Customer relationship management, accountability and maintenance in operational condition.</p>
-						<span class="school">Intermarché</span>
 					</div>
 
 					<div class="resume-item mb-4">
