--- a/index.html
+++ b/index.html
@@ -578,19 +578,25 @@
 						<span class="icon">
 							<span class="icon-presentation"></span>
 						</span>
-						<h3 class="mb-4">Computer Graphics</h3>
+						<h3 class="mb-4">Computer Graphics / Design</h3>
 						<div class="skills_list" style="display: grid;">
 							<div class="row">
-								<div class="col">
+								<div class="col-lg-5" style="margin-left: 8%;">
 									<a class="skill" href="https://unity.com/" target="_blank">
 										<img src="images/Skills/Unity.svg">
 										<span>Unity</span>
 									</a>
 								</div>
-								<div class="col">
+								<div class="col-lg-5" style="margin-right: 8%;">
 									<a class="skill" href="https://www.opengl.org//" target="_blank">
 										<img src="images/Skills/OpenGL.svg">
 										<span>OpenGL</span>
+									</a>
+								</div>
+								<div class="col-lg-5" style="margin-left: 30%;">
+									<a class="skill" href="https://www.blender.org/" target="_blank">
+										<img src="images/Skills/Blender.svg">
+										<span>Blender</span>
 									</a>
 								</div>
 							</div>
